Revert "Fix iOS flickering issues?"
This reverts commit 626f04830647431c5beb0e08c225061366e9c842.

--- a/source/stylesheets/_layout.css.scss
+++ b/source/stylesheets/_layout.css.scss
@@ -8,14 +8,6 @@ body {
   @media (max-width: 767px) { padding-bottom: 71px; }
 }
 
-// iOS only styling
-@media (max-width: 1024px) {
-  *:not(html) {
-    // fix for flickering when zooming in/out
-    -webkit-transform: translate3d(0, 0, 0);
-  }
-}
-
 #container {
   @extend .container;
 }
