--- a/source/stylesheets/_syntax.css.scss
+++ b/source/stylesheets/_syntax.css.scss
@@ -12,7 +12,6 @@
   margin-bottom: 20px;
   overflow: scroll;
   -webkit-overflow-scrolling: touch;
-  -webkit-backface-visibility: hidden;
 }
 
 .wrap-button {
